CrunchySack/Cml/antlr4/CmlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/garrett/Documents/Programming/CrunchyBox/CrunchySack/Cml/CmlGrammar/Cml.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class CmlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, INT=30, FLOAT=31, DOUBLE=32, 
		NULL=33, BOOL=34, STRING=35, ID=36, COMMENT=37, MULTILINE_COMMENT=38, 
		WHITESPACE=39;
	public const int
		RULE_cmlValueSource = 0, RULE_cmlComponentSource = 1, RULE_cmlComponentSourceList = 2, 
		RULE_cmlPrimitive = 3, RULE_cmlEntity = 4, RULE_cmlEntityChildren = 5, 
		RULE_cmlEntityMountPoint = 6, RULE_cmlEntityCompositeChild = 7, RULE_cmlEntityAttribute = 8, 
		RULE_cmlConstructor = 9, RULE_cmlValueSourceList = 10, RULE_cmlLinkSource = 11, 
		RULE_cmlLinkSourceWithEntitySource = 12, RULE_cmlFunctionSource = 13, 
		RULE_cmlInsertParameter = 14, RULE_cmlInfo = 15, RULE_cmlInfoSetting = 16, 
		RULE_cmlScriptEntry_Link = 17, RULE_cmlScriptEntry_Function = 18, RULE_cmlScriptFunctionParameter = 19, 
		RULE_cmlScriptFunctionParameters = 20, RULE_cmlScriptExpression = 21, 
		RULE_cmlScriptBinaryOperatorMultiplicative = 22, RULE_cmlScriptBinaryOperatorAdditive = 23, 
		RULE_cmlScriptBinaryOperatorComparative = 24, RULE_cmlScriptBinaryOperatorBoolean = 25, 
		RULE_cmlScriptSubExpression = 26, RULE_cmlScriptSyntheticString = 27, 
		RULE_cmlScriptInsertRepresentation = 28, RULE_cmlScriptValueReference = 29, 
		RULE_cmlScriptFunctionCall = 30, RULE_cmlScriptExpressionList = 31, RULE_cmlScriptLambda = 32, 
		RULE_cmlScriptStatement = 33, RULE_cmlScriptSingleStatement = 34, RULE_cmlScriptStatementBlock = 35;
	public static readonly string[] ruleNames = {
		"cmlValueSource", "cmlComponentSource", "cmlComponentSourceList", "cmlPrimitive", 
		"cmlEntity", "cmlEntityChildren", "cmlEntityMountPoint", "cmlEntityCompositeChild", 
		"cmlEntityAttribute", "cmlConstructor", "cmlValueSourceList", "cmlLinkSource", 
		"cmlLinkSourceWithEntitySource", "cmlFunctionSource", "cmlInsertParameter", 
		"cmlInfo", "cmlInfoSetting", "cmlScriptEntry_Link", "cmlScriptEntry_Function", 
		"cmlScriptFunctionParameter", "cmlScriptFunctionParameters", "cmlScriptExpression", 
		"cmlScriptBinaryOperatorMultiplicative", "cmlScriptBinaryOperatorAdditive", 
		"cmlScriptBinaryOperatorComparative", "cmlScriptBinaryOperatorBoolean", 
		"cmlScriptSubExpression", "cmlScriptSyntheticString", "cmlScriptInsertRepresentation", 
		"cmlScriptValueReference", "cmlScriptFunctionCall", "cmlScriptExpressionList", 
		"cmlScriptLambda", "cmlScriptStatement", "cmlScriptSingleStatement", "cmlScriptStatementBlock"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'('", "')'", "'['", "'*'", "']'", "'.'", "'='", "','", 
		"'<'", "'>'", "'^'", "'?'", "'/'", "'%'", "'+'", "'-'", "'!'", "'|'", 
		"'&'", "'$'", "'@'", "'this'", "'parent'", "';'", "'if'", "'else'", "'while'", 
		null, null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "INT", "FLOAT", "DOUBLE", "NULL", 
		"BOOL", "STRING", "ID", "COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Cml.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CmlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CmlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CmlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CmlValueSourceContext : ParserRuleContext {
		public CmlValueSourceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmlValueSource; } }
	 
		public CmlValueSourceContext() { }
		public virtual void CopyFrom(CmlValueSourceContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CmlValueSource_InsertParameterContext : CmlValueSourceContext {
		public CmlInsertParameterContext cmlInsertParameter() {
			return GetRuleContext<CmlInsertParameterContext>(0);
		}
		public CmlValueSource_InsertParameterContext(CmlValueSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlValueSource_InsertParameter(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CmlValueSource_FunctionSourceContext : CmlValueSourceContext {
		public CmlFunctionSourceContext cmlFunctionSource() {
			return GetRuleContext<CmlFunctionSourceContext>(0);
		}
		public CmlValueSource_FunctionSourceContext(CmlValueSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlValueSource_FunctionSource(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CmlValueSource_ComponentSourceContext : CmlValueSourceContext {
		public CmlComponentSourceContext cmlComponentSource() {
			return GetRuleContext<CmlComponentSourceContext>(0);
		}
		public CmlValueSource_ComponentSourceContext(CmlValueSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlValueSource_ComponentSource(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CmlValueSource_LinkSourceWithEntitySourceContext : CmlValueSourceContext {
		public CmlLinkSourceWithEntitySourceContext cmlLinkSourceWithEntitySource() {
			return GetRuleContext<CmlLinkSourceWithEntitySourceContext>(0);
		}
		public CmlValueSource_LinkSourceWithEntitySourceContext(CmlValueSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlValueSource_LinkSourceWithEntitySource(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CmlValueSource_ComponentSourceListContext : CmlValueSourceContext {
		public CmlComponentSourceListContext cmlComponentSourceList() {
			return GetRuleContext<CmlComponentSourceListContext>(0);
		}
		public CmlValueSource_ComponentSourceListContext(CmlValueSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlValueSource_ComponentSourceList(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CmlValueSource_LinkSourceContext : CmlValueSourceContext {
		public CmlLinkSourceContext cmlLinkSource() {
			return GetRuleContext<CmlLinkSourceContext>(0);
		}
		public CmlValueSource_LinkSourceContext(CmlValueSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlValueSource_LinkSource(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CmlValueSourceContext cmlValueSource() {
		CmlValueSourceContext _localctx = new CmlValueSourceContext(Context, State);
		EnterRule(_localctx, 0, RULE_cmlValueSource);
		try {
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				_localctx = new CmlValueSource_InsertParameterContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 72; cmlInsertParameter();
				}
				break;
			case 2:
				_localctx = new CmlValueSource_LinkSourceContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 73; cmlLinkSource();
				}
				break;
			case 3:
				_localctx = new CmlValueSource_LinkSourceWithEntitySourceContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 74; cmlLinkSourceWithEntitySource();
				}
				break;
			case 4:
				_localctx = new CmlValueSource_FunctionSourceContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 75; cmlFunctionSource();
				}
				break;
			case 5:
				_localctx = new CmlValueSource_ComponentSourceContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 76; cmlComponentSource();
				}
				break;
			case 6:
				_localctx = new CmlValueSource_ComponentSourceListContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 77; cmlComponentSourceList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmlComponentSourceContext : ParserRuleContext {
		public CmlComponentSourceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmlComponentSource; } }
	 
		public CmlComponentSourceContext() { }
		public virtual void CopyFrom(CmlComponentSourceContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CmlComponentSource_PrimitiveContext : CmlComponentSourceContext {
		public CmlPrimitiveContext cmlPrimitive() {
			return GetRuleContext<CmlPrimitiveContext>(0);
		}
		public CmlComponentSource_PrimitiveContext(CmlComponentSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlComponentSource_Primitive(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CmlComponentSource_InsertParameterContext : CmlComponentSourceContext {
		public CmlInsertParameterContext cmlInsertParameter() {
			return GetRuleContext<CmlInsertParameterContext>(0);
		}
		public CmlComponentSource_InsertParameterContext(CmlComponentSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlComponentSource_InsertParameter(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CmlComponentSource_EntityContext : CmlComponentSourceContext {
		public CmlEntityContext cmlEntity() {
			return GetRuleContext<CmlEntityContext>(0);
		}
		public CmlComponentSource_EntityContext(CmlComponentSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlComponentSource_Entity(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CmlComponentSource_ConstructorContext : CmlComponentSourceContext {
		public CmlConstructorContext cmlConstructor() {
			return GetRuleContext<CmlConstructorContext>(0);
		}
		public CmlComponentSource_ConstructorContext(CmlComponentSourceContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlComponentSource_Constructor(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CmlComponentSourceContext cmlComponentSource() {
		CmlComponentSourceContext _localctx = new CmlComponentSourceContext(Context, State);
		EnterRule(_localctx, 2, RULE_cmlComponentSource);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new CmlComponentSource_PrimitiveContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 80; cmlPrimitive();
				}
				break;
			case 2:
				_localctx = new CmlComponentSource_EntityContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 81; cmlEntity();
				}
				break;
			case 3:
				_localctx = new CmlComponentSource_ConstructorContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 82; cmlConstructor();
				}
				break;
			case 4:
				_localctx = new CmlComponentSource_InsertParameterContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 83; cmlInsertParameter();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmlComponentSourceListContext : ParserRuleContext {
		public CmlComponentSourceContext[] cmlComponentSource() {
			return GetRuleContexts<CmlComponentSourceContext>();
		}
		public CmlComponentSourceContext cmlComponentSource(int i) {
			return GetRuleContext<CmlComponentSourceContext>(i);
		}
		public CmlComponentSourceListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmlComponentSourceList; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICmlVisitor<TResult> typedVisitor = visitor as ICmlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmlComponentSourceList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CmlComponentSourceListContext cmlComponentSourceList() {
		CmlComponentSourceListContext _localctx = new CmlComponentSourceListContext(Context, State);
		EnterRule(_localctx, 4, RULE_cmlComponentSourceList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; Match(T__0);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << INT) | (1L << FLOAT) | (1L << DOUBLE) | (1L << NULL) | (1L << BOOL) | (1L << STRING) | (1L << ID))) != 0)) {
				{
				{
				State = 87; cmlComponentSource();
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 93; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
